bk_ida/gccida/c1/queue_to_ready
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1917:4: error: expected ';' after expression
rtx v7; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1917:5: error: use of undeclared identifier 'v7'
rtx v7; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1924:40: error: expected ')'
for ( i = insn_queue[v1]; i; i = ( rtx)i[1] ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1924:5: note: to match this '('
for ( i = insn_queue[v1]; i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1944:1: error: use of undeclared identifier 'v7'
v7 = insn_queue[( ( _BYTE)v6 + ( _BYTE)q_ptr) & 0x7F]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1945:6: error: use of undeclared identifier 'v7'
if ( v7 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1949:6: error: use of undeclared identifier 'v7'
v8 = v7->fld[0].rtx; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1960:1: error: use of undeclared identifier 'v7'
v7 = ( rtx)v7[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/haifa-sched.c:1962:9: error: use of undeclared identifier 'v7'
while ( v7 ); 
        ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/queue_to_ready/src/obj/haifa-sched.o] Error 1
